--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ dotnet: 3.1
 addons:
  ssh_known_hosts: jhray.com
 before_install:
- - bash _scripts/install.sh
+ - bash Blogs.Jhray/_scripts/install.sh
 script:
- - dotnet restore Blogs.Jhray.csproj
- - dotnet build Blogs.Jhray.csproj -c Release
+ - dotnet restore Blogs.Jhray.sln
+ - dotnet build Blogs.Jhray.sln -c Release
 after_success:
- - bash _scripts/deploy.sh
+ - bash Blogs.Jhray/_scripts/deploy.sh
