--- a/Blogs.Jhray/appsettings.json
+++ b/Blogs.Jhray/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Urls": "http://localhost:24512; https://localhost:24513",
+  "https_port":  24513,
   "AllowedHosts": "*"
 }
