--- a/Blogs.Jhray/appsettings.json
+++ b/Blogs.Jhray/appsettings.json
@@ -6,7 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Urls": "http://localhost:24512; https://localhost:24513",
-  "https_port":  24513,
+  "Urls": "http://localhost:24512",
   "AllowedHosts": "*"
 }
