--- a/Blogs.Jhray/Blogs.Jhray.csproj
+++ b/Blogs.Jhray/Blogs.Jhray.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.2" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.2" />
     <PackageReference Include="Markdig" Version="0.22.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
       <PrivateAssets>all</PrivateAssets>
