--- a/Blogs.Jhray/Blogs.Jhray.csproj
+++ b/Blogs.Jhray/Blogs.Jhray.csproj
@@ -10,10 +10,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\create.proto" GrpcServices="Client" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.2" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.2" />
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
     <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.34.0" />
     <PackageReference Include="Markdig" Version="0.22.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
       <PrivateAssets>all</PrivateAssets>
